# open-cfxmine

./: .gitignore  CMakeLists.txt  CUDA_12.8_RTX5090_OPTIMIZATIONS.md  CUDA_ERROR_FIX.md  validate_optimizations.sh
src/: OctopusCUDAMiner.cu  octopus_params.h
src/cuda/: cuda_helper.cuh  octopus.cuh
